neuro grammar adjustment

--- a/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
+++ b/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
@@ -13,12 +13,12 @@
    "id": "0984acbf-4b8a-4e62-958d-81601524a8b2",
    "metadata": {},
    "source": [
-    "This tutorial of shows how to analyze RNA velocity using cellDancer, including:\n",
+    "This tutorial shows how to analyze RNA velocity using cellDancer, including:\n",
     "* model estimation.\n",
     "* deriving cell fates in embedding level.\n",
     "* pseudotime estimation.\n",
     "\n",
-    "Here is the case study for the mouse hippocampal dentate gyrus neurogenesis data, we followed the gene and cell filtering methods by [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3), and selected 18,140 cells with 2,159 genes."
+    "Here is the case study for the mouse hippocampal dentate gyrus neurogenesis data, we followed the gene and cell filtering methods of [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3), and selected 18,140 cells with 2,159 genes."
    ]
   },
   {
@@ -88,7 +88,7 @@
    "source": [
     "The input data for cellDancer contains the abundances of unspliced RNA and spliced RNA. For the detail of obtaining the dataset and pre-processing, please refer to [Data Preprocessing](http:link).\n",
     "\n",
-    "The data of mouse hippocampal dentate gyrus neurogenesis could be downloaded from [Github](http:xxx/xxx/DentateGyrus_cell_type_u_s.csv). It could be loaded by ```pd.read_csv('your_path/DentateGyrus.csv')```. To load your own data, the dataframe should contain columns 'gene_name', 'unsplice', 'splice' ,'cellID' ,'clusters' ,'embedding1' , and 'embedding2.' For a detailed description of the data structure, please refer to [Data Preprocessing](http:link)."
+    "The data of mouse hippocampal dentate gyrus neurogenesis could be downloaded from [Github](http:xxx/xxx/DentateGyrus_cell_type_u_s.csv). It could be loaded by ```pd.read_csv('your_path/DentateGyrus.csv')```. To load your own data, the dataframe should contain columns 'gene_name', 'unsplice', 'splice' ,'cellID' ,'clusters' ,'embedding1' , and 'embedding2.' For a detailed description of the data structure, [Data Preprocessing](Data_Preprocessing.html) could be referred."
    ]
   },
   {
