notebook minor changes

--- a/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
+++ b/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "This tutorial shows how to analyze RNA velocity using cellDancer, including:\n",
     "* model estimation.\n",
-    "* deriving cell fates in embedding level.\n",
+    "* deriving cell fates in embedding space.\n",
     "* pseudotime estimation.\n",
     "\n",
     "Here is the case study for the mouse hippocampal dentate gyrus neurogenesis data, we followed the gene and cell filtering methods of [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3), and selected 18,140 cells with 2,159 genes."
@@ -36,7 +36,7 @@
    "id": "57fb4dd9-860c-4abe-8cff-3fa4e1435715",
    "metadata": {},
    "source": [
-    "To run the notebook locally, create a conda environment as ```conda env create -n cellDancer python==3.7.6```, then install the dependencies by ```pip install -r requirements.txt``` using this [requirememts.txt](requirememts.txt)."
+    "To run the notebook locally, [Getting Started](link) could be referred to install the environment and dependencies."
    ]
   },
   {
@@ -58,19 +58,12 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# import from absolute directory\n",
-    "# srcdir = '/Users/pengzhizhang/cellDancer/src'\n",
     "srcdir = '/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/bin/cellDancer_polish/src'\n",
-    "# srcdir = '/Users/wanglab/Documents/ShengyuLi/Velocity/bin/celldancer_polish/src'\n",
-    "#srcdir = '/Users/chen.weiqing/Documents/GitHub/cellDancer/src'\n",
     "sys.path.append(srcdir)\n",
     "\n",
     "import celldancer as cd\n",
     "import celldancer.cdplt as cdplt\n",
-    "from celldancer.cdplt import colormap\n",
-    "# from celldancer.velocity_estimation import velocity\n",
-    "# from celldancer.compute_cell_velocity import compute\n",
-    "# from celldancer.pseudo_time import pseudo_time\n",
-    "# from celldancer.embedding_kinetic_para import embedding"
+    "from celldancer.cdplt import colormap"
    ]
   },
   {
@@ -284,8 +277,6 @@
    "source": [
     "%autoreload 2\n",
     "cell_type_u_s_path=\"/Users/shengyuli/Library/CloudStorage/OneDrive-HoustonMethodist/work/Velocity/data/raw_data/DentateGyrus.csv\"\n",
-    "#cell_type_u_s_path='/Users/wanglab/Documents/ShengyuLi/Velocity/data/raw_data/DentateGyrus.csv'\n",
-    "#cell_type_u_s_path='/Users/chen.weiqing/code/celldancer/DentateGyrus.csv'\n",
     "cell_type_u_s=pd.read_csv(cell_type_u_s_path)\n",
     "cell_type_u_s"
    ]
@@ -623,13 +614,6 @@
    "source": [
     "%autoreload 2\n",
     "\n",
-    "# no deleted\n",
-    "gene_list=['Klf7', 'Scn2a1', 'Tmem163', 'Gnao1', 'Grm7', 'Dctn3', 'Plppr4', 'Shisa9', 'Pak3', 'Camk4', 'Evl', 'Slc24a2', 'Atp1a3', 'Dcx', 'Foxk2', 'Slc24a3', 'Gabrg3', 'Slc4a4', 'Prkag2', 'Nrxn1', 'Gpm6b', 'Fads2', 'Anks1b', 'Sfxn5', 'Ppfia2', 'Stxbp6', 'Ank2', 'Rgma', 'Gria1', 'Ablim1', 'Psd3', 'Ntrk2', 'Ncald', 'Abca1', 'Slc1a3', 'Hepacam', 'Spock3', 'Unc80', 'Nsf', 'Rims1', 'Astn1', 'Cdh9', 'Cdh13', 'Map1b', 'Camk2a', 'Dlgap1', 'Syt11', 'Sptbn1', 'Tbc1d16', 'Cadm1', 'Nav1', 'Sphkap', 'Prkcg', 'Ptpro', 'Adam23', 'Raver2', 'Pcsk2', 'Sez6l', 'Diaph3', 'Adgrb3', 'Kcnip1', 'Ppp3ca']\n",
-    "# kept 20\n",
-    "gene_list=['Klf7', 'Syt11', 'Gnao1', 'Dctn3', 'Gpm6b', 'Stxbp6', 'Dcx', 'Psd3', 'Ntrk2', 'Ncald', 'Slc1a3', 'Astn1', 'Camk2a', 'Evl','Tbc1d16', 'Cadm1', 'Kcnip1', 'Ptpro', 'Sez6l', 'Diaph3',]\n",
-    "# kept 15\n",
-    "gene_list=['Klf7', 'Syt11', 'Gnao1', 'Dctn3', 'Gpm6b', 'Ptpro', 'Dcx', 'Psd3', 'Ntrk2', 'Ncald', 'Slc1a3', 'Astn1', 'Evl','Tbc1d16', 'Cadm1']\n",
-    "# 30\n",
     "gene_list=['Psd3', 'Dcx', 'Syt11', 'Diaph3', 'Slc1a3', 'Gria1', 'Dctn3', 'Map1b', 'Camk2a', 'Gpm6b', 'Sez6l', 'Evl', 'Astn1', 'Ank2', 'Klf7', 'Tbc1d16', 'Atp1a3', 'Stxbp6', 'Scn2a1', 'Lhx9', 'Slc4a4', 'Ppfia2', 'Kcnip1', 'Ptpro', 'Ntrk2', 'Gnao1', 'Cadm1', 'Mef2c', 'Sptbn1', 'Ncald']\n",
     "\n",
     "loss_df, cellDancer_df=cd.velocity_estimation.velocity(cell_type_u_s,\\\n",
@@ -721,7 +705,7 @@
    "id": "f38143c2-6822-4b06-a083-3bbb2e2410fb",
    "metadata": {},
    "source": [
-    "To display the prediction in embedding level and to estimate pseudotime by using all genes, all the 2159 genes have already been predicted and could be downloaded from [DentateGyrus_cellDancer_estimation.csv](link). The .csv file could be loaded by ```pd.read_csv()```."
+    "To display the prediction in embedding space and to estimate pseudotime by using all genes, all the 2159 genes have already been predicted and could be downloaded from [DentateGyrus_cellDancer_estimation.csv](link). The .csv file could be loaded by ```pd.read_csv()```."
    ]
   },
   {
@@ -746,7 +730,7 @@
     "tags": []
    },
    "source": [
-    "## Coumpute and visualize the prediction in embedding level"
+    "## Coumpute and visualize the prediction in embedding space"
    ]
   },
   {
@@ -754,9 +738,9 @@
    "id": "73f36922-b4c5-40a4-bf31-e9738ac177e9",
    "metadata": {},
    "source": [
-    "The prediction in the embedding level could be calculated with ```celldancer.compute_cell_velocity.compute()```. If not specified, all genes in cellDancer_df will be used to calculate the prediction in the embedding level. Following the method of [velocyto](link) and [scVelo](link), we project the velocity vectors of the cells into the low-dimensional embedding space. The probabilities of one cell transitioning into another cell are computed.\n",
+    "The prediction in the embedding space could be calculated with ```celldancer.compute_cell_velocity.compute()```. If not specified, all genes in cellDancer_df will be used to calculate the prediction in the embedding space. Following the method of [velocyto](link) and [scVelo](link), we project the velocity vectors of the cells into the low-dimensional embedding space. The probabilities of one cell transitioning into another cell are computed.\n",
     "\n",
-    "After the calculation, the predicted direction in the embedding level, i.e. columns 'velocity1' and 'velocity2' will be added to the original dataframe. ```cdplt.cell.scatter_cell()``` could be used to display the predicted direction in embedding level."
+    "After the calculation, the predicted direction in the embedding space, i.e. columns 'velocity1' and 'velocity2' will be added to the original dataframe. ```cdplt.cell.scatter_cell()``` could be used to display the predicted direction in embedding space."
    ]
   },
   {
@@ -809,7 +793,7 @@
    "id": "3c6a4d23-073b-46bf-9acf-5371cc049f4c",
    "metadata": {},
    "source": [
-    "Based on the prediction in embedding level, the pseudotime could be estimated with ```cd.pseudo_time.pseudo_time()```"
+    "Based on the prediction in embedding space, the pseudotime could be estimated with ```cd.pseudo_time.pseudo_time()```"
    ]
   },
   {
@@ -866,7 +850,7 @@
    ],
    "source": [
     "# Plot pseudotime\n",
-    "fig, ax = plt.subplots(figsize=(6,6))\n",
+    "fig, ax = plt.subplots(figsize=(10,10))\n",
     "im=cdplt.cell.scatter_cell(ax,cellDancer_df, colors='pseudotime', alpha=0.5, velocity=False)\n",
     "ax.axis('off')\n",
     "plt.show()"
@@ -940,7 +924,7 @@
    "id": "b7156a67-5b12-4201-9d77-f1705a6f5cfa",
    "metadata": {},
    "source": [
-    "## Kinetics in embedding level"
+    "## Kinetics in embedding space"
    ]
   },
   {
@@ -948,7 +932,7 @@
    "id": "0164ffbd-3daf-4259-a55a-5d7c017cd3d9",
    "metadata": {},
    "source": [
-    "cellDancer provides other descriptive functions for visualization. In embedding level, we could visualize the alpha, beta, gamma, spliced reads, and unspliced reads with ```celldancer.cdplt.cell.scatter_cell()```. The specific genes could be analyzed based one the kinetics' plot. Taking Ntrk2 as an example, astrocytes and OPCs have high α and low β, resulting in high expression of unspliced Ntrk2. Dentate gyrus granule neurons and pyramidal neurons have high β and low γ, resulting in high expression of spliced Ntrk2."
+    "cellDancer provides other descriptive functions for visualization. In embedding space, we could visualize the alpha, beta, gamma, spliced reads, and unspliced reads with ```celldancer.cdplt.cell.scatter_cell()```. The specific genes could be analyzed based one the kinetics' plot. Taking Ntrk2 as an example, astrocytes and OPCs have high α and low β, resulting in high expression of unspliced Ntrk2. Dentate gyrus granule neurons and pyramidal neurons have high β and low γ, resulting in high expression of spliced Ntrk2."
    ]
   },
   {
@@ -1007,7 +991,7 @@
     }
    ],
    "source": [
-    "gene_samples=['Ntrk2','Psd3','Elavl4','Rimbp2']\n",
+    "gene_samples=['Ntrk2','Psd3','Rimbp2']\n",
     "\n",
     "for gene in gene_samples:\n",
     "    fig, ax = plt.subplots(ncols=5, figsize=(15,3))\n",
