--- a/analysis/install_and_preprocessing/install.ipynb
+++ b/analysis/install_and_preprocessing/install.ipynb
@@ -18,6 +18,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4bcd9ae1-a096-4ecf-9479-8dc6941481c3",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "To run the notebook locally, create a conda environment as ```conda env create -n cellDancer python==3.7.6```, then install the dependencies by ```pip install -r requirements.txt``` using this [requirememts.txt](requirememts.txt)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "37765d04-68ba-4dc7-9cd3-e25f6e15c2a7",
