--- a/analysis/CaseStudyNotebook/Pancreas_decoding_kinetics-has time.ipynb
+++ b/analysis/CaseStudyNotebook/Pancreas_decoding_kinetics-has time.ipynb
@@ -13,7 +13,7 @@
    "id": "c722ce38-4fdf-402e-bc8a-67dd276441db",
    "metadata": {},
    "source": [
-    "This tutorial shows how to derive cell fates at the embedding space. Moreover, our advantage of decoding cell sub-population based on kinetic parameters will be shown.\n",
+    "This tutorial shows how to derive cell fates in the embedding space. Moreover, our advantage of decoding cell sub-population based on kinetic parameters will be shown.\n",
     "\n",
     "In this analysis of the pancreatic endocrinogenesis data, we follow the gene and cell filtering methods of [Bergen et.al](https://www.nature.com/articles/s41587-020-0591-3). 3,696 cells with 2,000 genes are selected. "
    ]
