--- a/analysis/CaseStudyNotebook/CaseStudy_Gastrulation_transcriptional_boost.ipynb
+++ b/analysis/CaseStudyNotebook/CaseStudy_Gastrulation_transcriptional_boost.ipynb
@@ -993,6 +993,7 @@
     "                                                    projection_neighbor_size=10,\n",
     "                                                    speed_up=(100,100))\n",
     "\n",
+    "# plot cell velocity\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "im = cdplt.cell.scatter_cell(ax,\n",
     "                             cellDancer_df_murk, \n",
