--- a/analysis/CaseStudyNotebook/CaseStudy_Gastrulation_transcriptional_boost.ipynb
+++ b/analysis/CaseStudyNotebook/CaseStudy_Gastrulation_transcriptional_boost.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Resolving the transcriptional boost in gastrulation erythroid maturation data "
+    "# Resolve the transcriptional boost in gastrulation erythroid maturation data "
    ]
   },
   {
@@ -15,10 +15,7 @@
    "id": "f5f7044a-3602-4b93-85ee-144515b32eb7",
    "metadata": {},
    "source": [
-    "This tutorial shows how to analyze RNA velocity using cellDancer, including:\n",
-    "* model estimation.\n",
-    "* deriving cell fates in embedding level.\n",
-    "* pseudotime estimation.\n",
+    "This tutorial shows how to analyze RNA velocity using cellDancer, including: (1) model estimation, (2) deriving cell fates in embedding level, and (3) pseudotime estimation.\n",
     " \n",
     "Our advantage of resolving the existing difficulty of predicting genes that have transcriptional boost mentioned by [Bergen et al.](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02414-y) will be shown as well.\n",
     "\n",
@@ -641,10 +638,7 @@
    "source": [
     "Let’s visualize the predicted results pf each gene with ```celldancer.cdplt.gene.scatter_gene()```.\n",
     "\n",
-    "From the figures below, the prediction of those genes that have transcriptional boost (Hba-x, Smim1, and Hbb-y) fulfills the biological cell type evolution of:\n",
-    "1) haemato-endothelial progenitors.\n",
-    "2) blood progenitors 1/2.\n",
-    "3) erythroid.\n",
+    "From the figures below, the prediction of those genes that have transcriptional boost (Hba-x, Smim1, and Hbb-y) fulfills the biological cell type evolution of: (1) haemato-endothelial progenitors, (2) blood progenitors 1/2, and (3) erythroid.\n",
     "\n",
     "This reflects the ability of our method to solve the transcriptional boost situation."
    ]
@@ -992,7 +986,6 @@
     "                                                    expression_scale='power10',\n",
     "                                                    projection_neighbor_size=10,\n",
     "                                                    speed_up=(100,100))\n",
-    "\n",
     "# plot cell velocity\n",
     "fig, ax = plt.subplots(figsize=(6,6))\n",
     "im = cdplt.cell.scatter_cell(ax,\n",
