--- a/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
+++ b/analysis/CaseStudyNotebook/Neuro_velocity_analysis.ipynb
@@ -5,7 +5,7 @@
    "id": "3187ae73-669d-4c8e-ac9f-22c7eb11b3cc",
    "metadata": {},
    "source": [
-    "# RNA velocity analysis for mouse hippocampal dentate gyrus neurogenesis data"
+    "# Analyze RNA velocity for mouse hippocampal dentate gyrus neurogenesis data"
    ]
   },
   {
@@ -13,10 +13,8 @@
    "id": "0984acbf-4b8a-4e62-958d-81601524a8b2",
    "metadata": {},
    "source": [
-    "This tutorial shows how to analyze RNA velocity using cellDancer, including:\n",
-    "* model estimation.\n",
-    "* deriving cell fates in embedding space.\n",
-    "* pseudotime estimation.\n",
+    "This tutorial shows how to analyze RNA velocity using cellDancer, including:: (1) model estimation, (2) deriving cell fates in embedding level, and (3) pseudotime estimation.\n",
+    " \n",
     "\n",
     "Here is the case study for the mouse hippocampal dentate gyrus neurogenesis data, we followed the gene and cell filtering methods of [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3), and selected 18,140 cells with 2,159 genes."
    ]
