--- a/analysis/SIM_sl/boost_debug.ipynb
+++ b/analysis/SIM_sl/boost_debug.ipynb
@@ -131,7 +131,19 @@
     "        i=0\n",
     "        data_df=pd.DataFrame()\n",
     "        for alpha1,alpha2,beta1,beta2,gamma1,gamma2,path1_pct,path2_pct in zip(alpha1_list,alpha2_list,beta1_list,beta2_list,gamma1_list,gamma2_list,path1_pct_list,path2_pct_list):\n",
-    "            data = generate_onepath(gene_num=1, alpha1=alpha1, alpha2=alpha2, beta1=beta1, beta2=beta2, gamma1=gamma1, gamma2=gamma2, path1_pct=path1_pct, path2_pct=path2_pct, path1_sample=int(path2_sample/ratio), path2_sample=path2_sample, noise_level=0.2)\n",
+    "            data = generate_onepath(gene_num=1, \n",
+    "                                    alpha1=alpha1, \n",
+    "                                    alpha2=alpha2, \n",
+    "                                    beta1=beta1, \n",
+    "                                    beta2=beta2, \n",
+    "                                    gamma1=gamma1, \n",
+    "                                    gamma2=gamma2, \n",
+    "                                    path1_pct=path1_pct, \n",
+    "                                    path2_pct=path2_pct, \n",
+    "                                    path1_sample=int(path2_sample/ratio), \n",
+    "                                    path2_sample=path2_sample, \n",
+    "                                    noise_level=0.2)\n",
+    "            \n",
     "            data.gene_name = 'simulation'+str(i)\n",
     "            i=i+1\n",
     "            if i % 100 == 0:print(i)\n",
