--- a/analysis/SIM_sl/multipath_gen_and_celldancer-fin0609.ipynb
+++ b/analysis/SIM_sl/multipath_gen_and_celldancer-fin0609.ipynb
@@ -210,7 +210,19 @@
     "        i=0\n",
     "        data_df=pd.DataFrame()\n",
     "        for alpha1,alpha2,beta1,beta2,gamma1,gamma2 in zip(alpha1_list,alpha2_list,beta1_list,beta2_list,gamma1_list,gamma2_list):\n",
-    "            data = generate_multipath(gene_num=1, alpha1=alpha1, alpha2=alpha2, beta1=beta1, beta2=beta2, gamma1=gamma1, gamma2=gamma2, path1_pct=path1_pct, path2_pct=path2_pct, path1_sample=int(path2_sample/ratio), path2_sample=path2_sample, noise_level=0.2)\n",
+    "            \n",
+    "            data = generate_multipath(gene_num=1, \n",
+    "                                      alpha1=alpha1, \n",
+    "                                      alpha2=alpha2, \n",
+    "                                      beta1=beta1, \n",
+    "                                      beta2=beta2, \n",
+    "                                      gamma1=gamma1, \n",
+    "                                      gamma2=gamma2, \n",
+    "                                      path1_pct=path1_pct, \n",
+    "                                      path2_pct=path2_pct, \n",
+    "                                      path1_sample=int(path2_sample/ratio), \n",
+    "                                      path2_sample=path2_sample, \n",
+    "                                      noise_level=0.2)\n",
     "\n",
     "\n",
     "            # data = generate_multipath(gene_num=1, alpha1=alpha1, alpha2=alpha2, beta1=beta1, beta2=beta2, gamma1=gamma1, gamma2=gamma2, path1_pct=path1_pct, path2_pct=path2_pct, path1_sample=path1_sample, path2_sample=int(path1_sample/ratio), noise_level=0.2)\n",
