--- a/analysis/SIM_sl/backward_debug.ipynb
+++ b/analysis/SIM_sl/backward_debug.ipynb
@@ -171,7 +171,20 @@
     "        i=0\n",
     "        data_df=pd.DataFrame()\n",
     "        for start_s1,start_s2,start_u1,start_u2, alpha1,alpha2,beta1,beta2,gamma1,gamma2 in zip(start_s1_list,start_s2_list,start_u1_list,start_u2_list, alpha1_list,alpha2_list,beta1_list,beta2_list,gamma1_list,gamma2_list):\n",
-    "            data = generate_backward(start_s1, start_s2, start_u1, start_u2,alpha1=alpha1, alpha2=alpha2, beta1=beta1, beta2=beta2, gamma1=gamma1, gamma2=gamma2, path1_sample=int(path1_sample/ratio), path2_sample=path1_sample, noise_level=0.2)\n",
+    "            data = generate_backward(start_s1, \n",
+    "                                     start_s2, \n",
+    "                                     start_u1, \n",
+    "                                     start_u2,\n",
+    "                                     alpha1=alpha1, \n",
+    "                                     alpha2=alpha2, \n",
+    "                                     beta1=beta1, \n",
+    "                                     beta2=beta2, \n",
+    "                                     gamma1=gamma1, \n",
+    "                                     gamma2=gamma2, \n",
+    "                                     path1_sample=int(path1_sample/ratio), \n",
+    "                                     path2_sample=path1_sample, \n",
+    "                                     noise_level=0.2)\n",
+    "            \n",
     "            data.loc[:,'gene_name'] = 'simulation'+str(i)\n",
     "            i=i+1\n",
     "            if i % 100 == 0:print(i)\n",
