--- a/analysis/DeepVelo_DentateGyrus.ipynb
+++ b/analysis/DeepVelo_DentateGyrus.ipynb
@@ -4,14 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implementing DeepVelo in mouse hippocampus development data"
+    "# Implement DeepVelo in mouse hippocampus development"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To compare cellDancer with other methods, this notebook shows the prediction of RNA velocity of [DeepVelo](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v2) in mouse hippocampus development. We follow the preprocessing methods of [La Manno et al.](https://www.nature.com/articles/s41587-020-0591-3) to filter genes and cells. 18,140 cells with 2,159 genes were selected, which is the same as the datasets used in cellDancer. The input data could be downloaded from [DentateGyrus.h5ad](https:DentateGyrus.h5ad)."
+    "To compare with [Cui et al.](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v2.full) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877; version 2), in this notebook, we follow the instructions of [DeepVelo](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v2) and implement DeepVelo in mouse hippocampus development data. The selected cells with genes in mouse hippocampus development data are the same as the datasets used in our study. The input data could be downloaded from [DentateGyrus.h5ad](https:DentateGyrus.h5ad)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Build environment and install dependencies"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create the environment of DeepVelo by running the commands below in an anaconda environment. We download and install DeepVelo from https://github.com/bowang-lab/DeepVelo on the main thread on 08/03/2022 (version: 0.2.5rc1). The code could also be downloaded [here](https://github.com/bowang-lab/DeepVelo). We install cellDancer to plot figures. \n",
+    "\n",
+    "`conda create -n deepvelo python=3.7.6`\n",
+    "\n",
+    "`conda activate deepvelo`\n",
+    "\n",
+    "`pip install 'your_path/DeepVelo'`\n",
+    "\n",
+    "`pip install 'your_path/Source Code/cellDancer'`\n",
+    "\n",
+    "`pip install -r 'your_path/Source Code/cellDancer/requirements.txt'`\n",
+    "\n",
+    "`pip install numpy==1.21.1`\n",
+    "\n",
+    "`pip install anndata==0.8.0`"
    ]
   },
   {
@@ -27,7 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%\n",
     "import numpy as np\n",
     "import scvelo as scv\n",
     "import torch\n",
@@ -40,20 +67,7 @@
     "from deepvelo.utils.plot import statplot, compare_plot\n",
     "from deepvelo import train, Constants\n",
     "\n",
-    "import anndata as ann\n",
-    "\n",
-    "from adata_to_df import adata_to_df\n",
-    "import os\n",
-    "import sys\n",
-    "import glob\n",
-    "import pandas as pd\n",
-    "import math\n",
-    "import matplotlib.pyplot as plt\n",
-    "import celldancer as cd\n",
-    "import celldancer.cdplt as cdplt\n",
-    "from celldancer.cdplt import colormap\n",
-    "\n",
-    "# fix random seeds for reproducibility\n",
+    "# set random seeds for reproducibility\n",
     "SEED = 123\n",
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
@@ -63,7 +77,19 @@
     "scv.settings.verbosity = 3  # show errors(0), warnings(1), info(2), hints(3)\n",
     "scv.settings.set_figure_params(\n",
     "    \"scvelo\", transparent=False\n",
-    ")  # for beautified visualization"
+    ")  # for beautified visualization\n",
+    "\n",
+    "import anndata as ann\n",
+    "from adata_to_df import adata_to_df\n",
+    "import os\n",
+    "import sys\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "import celldancer as cd\n",
+    "import celldancer.cdplt as cdplt\n",
+    "from celldancer.cdplt import colormap"
    ]
   },
   {
@@ -86,7 +112,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DeepVelo"
+    "# Run DeepVelo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We run DeepVelo with the same configurations in the instruction. To be a fair comparison, we activated the prediction of unspliced reads. We set n_gpu to 0 to run DeepVelo in CPU. "
    ]
   },
   {
@@ -134,9 +167,9 @@
     "# specific configs to overide the default configs\n",
     "configs = {\n",
     "    \"name\": \"DeepVelo\", # name of the experiment\n",
-    "    \"loss\": {\"args\": {\"coeff_s\": autoset_coeff_s(adata)}},\n",
+    "    \"loss\": {\"args\": {\"coeff_s\": autoset_coeff_s(adata)}}, # The ratio of spliced reads is 71.2% (between 70% and 85%). Suggest using coeff_s 0.75.\n",
     "    \"trainer\": {\"verbosity\": 0}, # increase verbosity to show training progress\n",
-    "    \"arch\":{\"args\":{\"pred_unspliced\":True}}, \n",
+    "    \"arch\":{\"args\":{\"pred_unspliced\":True}}, # To be a fair comparison, we activated the prediction of unspliced reads.\n",
     "    \"n_gpu\":0, # enable to use CPU\n",
     "}\n",
     "configs = update_dict(Constants.default_configs, configs)\n",
