VeloVAE case study

--- a/analysis/VeloVAE_DentateGyrus.ipynb
+++ b/analysis/VeloVAE_DentateGyrus.ipynb
@@ -13,7 +13,7 @@
    "id": "ec0eee05-5d63-4110-82f1-89d4d1bf1393",
    "metadata": {},
    "source": [
-    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement DeepVelo in mouse hippocampus development data. The selected cells with genes in mouse hippocampus development data are the same as the datasets used in our study. The input data could be downloaded from [DentateGyrus.h5ad.h5ad](https:DentateGyrus.h5ad)."
+    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement VeloVAE in mouse hippocampus development data. The selected cells with genes in mouse hippocampus development data are the same as the datasets used in our study. The input data could be downloaded from [DentateGyrus.h5ad](https:DentateGyrus.h5ad)."
    ]
   },
   {
