--- a/analysis/velovae_Gastrulation.ipynb
+++ b/analysis/velovae_Gastrulation.ipynb
@@ -13,7 +13,7 @@
    "id": "8f69cf39-8f18-4ee6-8ab8-91d914873608",
    "metadata": {},
    "source": [
-    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement DeepVelo in gastrulation erythroid maturation data. The selected cells with genes in gastrulation erythroid maturation data are the same as the datasets used in our study. The input data could be downloaded from [GastrulationErythroid.h5ad](https:DentateGyrus.h5ad)."
+    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement VeloVAE in gastrulation erythroid maturation data. The selected cells with genes in gastrulation erythroid maturation data are the same as the datasets used in our study. The input data could be downloaded from [GastrulationErythroid.h5ad](https:DentateGyrus.h5ad)."
    ]
   },
   {
