--- a/analysis/VeloVAE_Gastrulation.ipynb
+++ b/analysis/VeloVAE_Gastrulation.ipynb
@@ -306,7 +306,7 @@
    "id": "98618d3b-c892-4ccf-9986-2c72016eafc9",
    "metadata": {},
    "source": [
-    "To have a fair comparison between our method and VeloVAE, we also implement DeepVelo to datasets with MURK genes only and project the RNA velocity in embedding space. The MURK gene list could be obtained from [Additional file 3: Table S2](https://static-content.springer.com/esm/art%3A10.1186%2Fs13059-021-02414-y/MediaObjects/13059_2021_2414_MOESM3_ESM.csv) in the work of [Barile et al](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02414-y). "
+    "To have a fair comparison between our method and VeloVAE, we also implement VeloVAE to datasets with MURK genes only and project the RNA velocity in embedding space. The MURK gene list could be obtained from [Additional file 3: Table S2](https://static-content.springer.com/esm/art%3A10.1186%2Fs13059-021-02414-y/MediaObjects/13059_2021_2414_MOESM3_ESM.csv) in the work of [Barile et al](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-021-02414-y). "
    ]
   },
   {
