VeloVAE case study

--- a/analysis/VeloVAE_DentateGyrus.ipynb
+++ b/analysis/VeloVAE_DentateGyrus.ipynb
@@ -13,7 +13,7 @@
    "id": "ec0eee05-5d63-4110-82f1-89d4d1bf1393",
    "metadata": {},
    "source": [
-    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement VeloVAE in mouse hippocampus development data. The selected cells with genes in mouse hippocampus development data are the same as the datasets used in our study. The input data could be downloaded from [DentateGyrus.h5ad](https:DentateGyrus.h5ad)."
+    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement VeloVAE in mouse hippocampus development data. The selected cells with genes in mouse hippocampus development data are the same as the datasets used in our study. The input data could be downloaded from [DentateGyrus.h5ad](https:DentateGyrus.h5ad)."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "aa62e8a9-7baf-4f31-84ef-788d51cca619",
    "metadata": {},
    "source": [
-    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download and install VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread on 08/03/2022. The code could also be downloaded [here](https://github.com/welch-lab/VeloVAE). We install cellDancer to plot figures.\n",
+    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download and install the latest VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread (commit: 018ee60998c9b63f441fdfc4836dbd5baadf1459). The code could also be downloaded [here](https://github.com/welch-lab/VeloVAE). We install cellDancer to plot figures.\n",
     "\n",
     "`conda create -n velovae python=3.7.6`\n",
     "\n",
