--- a/analysis/VeloVAE_Gastrulation.ipynb
+++ b/analysis/VeloVAE_Gastrulation.ipynb
@@ -13,7 +13,7 @@
    "id": "8f69cf39-8f18-4ee6-8ab8-91d914873608",
    "metadata": {},
    "source": [
-    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement VeloVAE in gastrulation erythroid maturation data. The selected cells with genes in gastrulation erythroid maturation data are the same as the datasets used in our study. The input data could be downloaded from [GastrulationErythroid.h5ad](https:DentateGyrus.h5ad)."
+    "To compare with [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1?versioned=true) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1), in this notebook, we follow the instructions of [VeloVAE](https://github.com/welch-lab/VeloVAE) and implement VeloVAE in gastrulation erythroid maturation data. The selected cells with genes in gastrulation erythroid maturation data are the same as the datasets used in our study. The input data could be downloaded from [GastrulationErythroid.h5ad](https:DentateGyrus.h5ad)."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "ce86765d-4c5b-4655-a77f-90ab9b458726",
    "metadata": {},
    "source": [
-    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download and install VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread on 08/03/2022. The code could also be downloaded [here](https://github.com/welch-lab/VeloVAE). We install cellDancer to plot figures.\n",
+    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download and install the latest VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread (commit: 018ee60998c9b63f441fdfc4836dbd5baadf1459). The code could also be downloaded [here](https://github.com/welch-lab/VeloVAE). We install cellDancer to plot figures.\n",
     "\n",
     "`conda create -n velovae python=3.7.6`\n",
     "\n",
