--- a/analysis/VeloVAE_DentateGyrus.ipynb
+++ b/analysis/VeloVAE_DentateGyrus.ipynb
@@ -29,7 +29,7 @@
    "id": "aa62e8a9-7baf-4f31-84ef-788d51cca619",
    "metadata": {},
    "source": [
-    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download and install the latest VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread (commit: 018ee60998c9b63f441fdfc4836dbd5baadf1459). The code could also be downloaded [here](https://github.com/welch-lab/VeloVAE). We install cellDancer to plot figures.\n",
+    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download the latest VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread (commit: 018ee60998c9b63f441fdfc4836dbd5baadf1459). We install cellDancer to plot figures.\n",
     "\n",
     "`conda create -n velovae python=3.7.6`\n",
     "\n",
@@ -41,7 +41,9 @@
     "\n",
     "`pip install 'your_path/Source Code/cellDancer'`\n",
     "\n",
-    "`pip install -r 'your_path/Source Code/cellDancer/requirements.txt'`"
+    "`pip install -r 'your_path/Source Code/cellDancer/requirements.txt'`\n",
+    "\n",
+    "`pip install louvain`"
    ]
   },
   {
