--- a/analysis/VeloVAE_Gastrulation.ipynb
+++ b/analysis/VeloVAE_Gastrulation.ipynb
@@ -29,7 +29,7 @@
    "id": "ce86765d-4c5b-4655-a77f-90ab9b458726",
    "metadata": {},
    "source": [
-    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download and install the latest VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread (commit: 018ee60998c9b63f441fdfc4836dbd5baadf1459). The code could also be downloaded [here](https://github.com/welch-lab/VeloVAE). We install cellDancer to plot figures.\n",
+    "We create the environment of VeloVAE by running the commands below in an anaconda environment. We download the latest VeloVAE from https://github.com/welch-lab/VeloVAE on the main thread (commit: 018ee60998c9b63f441fdfc4836dbd5baadf1459). We install cellDancer to plot figures.\n",
     "\n",
     "`conda create -n velovae python=3.7.6`\n",
     "\n",
@@ -41,7 +41,9 @@
     "\n",
     "`pip install 'your_path/Source Code/cellDancer'`\n",
     "\n",
-    "`pip install -r 'your_path/Source Code/cellDancer/requirements.txt'`"
+    "`pip install -r 'your_path/Source Code/cellDancer/requirements.txt'`\n",
+    "\n",
+    "`pip install louvain`"
    ]
   },
   {
@@ -379,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model vae using all genes:\n",
+      "Model vae using MURK genes:\n",
       "computing velocity graph (using 12/48 cores)\n"
      ]
     },
@@ -430,7 +432,7 @@
     "basis = \"umap\"\n",
     "\n",
     "for key in ['vae']:\n",
-    "    print(f\"Model {key} using all genes:\")\n",
+    "    print(f\"Model {key} using MURK genes:\")\n",
     "    scv.tl.velocity_graph(adata_murk, vkey=f'{key}_velocity', n_jobs=12)\n",
     "    scv.tl.velocity_embedding(adata_murk, vkey=f'{key}_velocity', basis=basis)\n",
     "    adata_murk.write_h5ad(data_path_base+f\"/{dataset}_murk_out.h5ad\")\n",
