--- a/analysis/VeloVAE_Pancreas_Reproduce.ipynb
+++ b/analysis/VeloVAE_Pancreas_Reproduce.ipynb
@@ -15,7 +15,7 @@
    "id": "f5f68a03-2af9-4650-92ab-9f99ac1ec7e3",
    "metadata": {},
    "source": [
-    "In this notebook, we follow the instructions of VeloVAE and are able to reproduce the case study of pancreatic endocrinogenesis by [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v2.full) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 2)."
+    "In this notebook, we follow the instructions of VeloVAE and are able to reproduce the case study of pancreatic endocrinogenesis by [Gu et al.](https://www.biorxiv.org/content/10.1101/2022.07.08.499381v1?versioned=true) in bioRxiv (doi: https://doi.org/10.1101/2022.07.08.499381; version 1)."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "id": "994052ff-4b5e-4266-a29f-48126887e5d9",
    "metadata": {},
    "source": [
-    "We run DeepVelo with the same configurations in the instruction."
+    "We run VeloVAE with the same configurations in the instruction."
    ]
   },
   {
