--- a/analysis/DeepVelo_Pancreas_Reproduce.ipynb
+++ b/analysis/DeepVelo_Pancreas_Reproduce.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we follow the instructions of DeepVelo and are able to reproduce the case study of pancreatic endocrinogenesis by [Cui et al.](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v2.full) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877; version 2)."
+    "In this notebook, we follow the instructions of DeepVelo and are able to reproduce the case study of pancreatic endocrinogenesis by [Cui et al.](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v1?versioned=true) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877; version 1)."
    ]
   },
   {
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create the environment of DeepVelo by running the commands below in an anaconda environment. We download and install DeepVelo from https://github.com/bowang-lab/DeepVelo on the main thread on 08/03/2022 (version: 0.2.5rc1). The code could also be downloaded [here](https://github.com/bowang-lab/DeepVelo).\n",
+    "We create the environment of DeepVelo by running the commands below in an anaconda environment. We download and install the latest DeepVelo from https://github.com/bowang-lab/DeepVelo on the main thread (commit: 42f97ce66d1be98b504efabfb4f45d0f673f648c; version: 0.2.5rc1).\n",
     "\n",
     "`conda create -n deepvelo python=3.7.6`\n",
     "\n",
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We demonstrate the full training pipeline using an example of the pancreatic endocrinogenesis data from scVelo."
+    "We follow the full pipeline of DeepVelo to train the pancreatic endocrinogenesis data."
    ]
   },
   {
