--- a/analysis/DeepVelo_Pancreas_Reproduce.ipynb
+++ b/analysis/DeepVelo_Pancreas_Reproduce.ipynb
@@ -11,21 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we follow the instructions of DeepVelo and are able to reproduce the case study of pancreatic endocrinogenesis by [Cui et al.](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v1?versioned=true) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877; version 1)."
+    "In this notebook, we follow the instructions of DeepVelo and are able to reproduce the case study of pancreatic endocrinogenesis by [Cui et al.](https://doi.org/10.1101/2022.04.03.486877) in bioRxiv (doi: https://doi.org/10.1101/2022.04.03.486877) with the latest codes from github."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Build environment and install dependencies"
+    "# Build environment and install dependencies"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We create the environment of DeepVelo by running the commands below in an anaconda environment. We download and install the latest DeepVelo from https://github.com/bowang-lab/DeepVelo on the main thread (commit: 42f97ce66d1be98b504efabfb4f45d0f673f648c; version: 0.2.5rc1).\n",
+    "We create the environment of DeepVelo by running the commands below in an anaconda environment. We download and install DeepVelo from https://github.com/bowang-lab/DeepVelo on the main thread (commit: 42f97ce66d1be98b504efabfb4f45d0f673f648c; version: 0.2.5rc1).\n",
     "\n",
     "`conda create -n deepvelo python=3.7.6`\n",
     "\n",
@@ -313,14 +313,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plot pseudotime in embedding space (Fig. 4a in [Cui et al.](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v2.full))"
+    "# Plot latent time in embedding space (Fig. 4c in [Cui et al.](https://www.biorxiv.org/content/10.1101/2022.04.03.486877v2.full))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We follow the instructions of DeepVelo to calculate and display the pseudotime."
+    "We follow the instructions of DeepVelo to calculate and display the latent time ."
    ]
   },
   {
