--- a/analysis/VeloVAE_Pancreas_Reproduce.ipynb
+++ b/analysis/VeloVAE_Pancreas_Reproduce.ipynb
@@ -317,7 +317,7 @@
    "id": "637c110b-525a-42ab-95c0-60097cc40eae",
    "metadata": {},
    "source": [
-    "The results of Full VB model and Branching ODE model are used to generate Fig. 3e. The processing of Branching ODE model is in the next section."
+    "The results of Full VB model and Branching ODE model are used to generate Fig. 3e. The training of Branching ODE model is in the next section."
    ]
   },
   {
